--- a/M10_T01.ipynb
+++ b/M10_T01.ipynb
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "42a4ee2d",
+   "id": "f58a1a2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1960,7 +1960,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6881b9b4",
+   "id": "da504239",
    "metadata": {},
    "source": [
     "Ejercicio 2 :\n",
@@ -2126,11 +2126,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "588025dc",
+   "id": "50f861d8",
    "metadata": {},
    "source": [
     "Context : Este segundo Dataset contiene las cotizaciones de las acciones del IBEX35\n",
     "\n",
+    "\n",
+    "Título = Nombre de la empresa cotizada\n",
+    "Corización previa = Valor de la acción día anterior\n",
+    "Diferencia = Aumento/ Descenso valor respecto al día anterior\n",
     "\n",
     "Adknowledgements :https://www.bolsasymercados.es/bme-exchange/es/Mercados-y-Cotizaciones/Acciones/Mercado-Continuo/Precios/ibex-35-ES0SI0000005\n",
     "\n",
@@ -2140,7 +2144,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "9d3af1d8",
+   "id": "6139e2ee",
    "metadata": {},
    "outputs": [
     {
@@ -2350,7 +2354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa70e1ce",
+   "id": "556cbc3b",
    "metadata": {},
    "outputs": [],
    "source": []
