--- a/M10_T01.ipynb
+++ b/M10_T01.ipynb
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f58a1a2c",
+   "id": "39a2f600",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1960,10 +1960,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da504239",
+   "id": "3013d23e",
    "metadata": {},
    "source": [
-    "Ejercicio 2 :\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Ejercicio 2 :\n",
     "\n",
     "\n",
     "\n",
@@ -2126,7 +2129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50f861d8",
+   "id": "b17a0652",
    "metadata": {},
    "source": [
     "Context : Este segundo Dataset contiene las cotizaciones de las acciones del IBEX35\n",
@@ -2144,7 +2147,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "6139e2ee",
+   "id": "5a81427f",
    "metadata": {},
    "outputs": [
     {
@@ -2354,7 +2357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "556cbc3b",
+   "id": "baed0c44",
    "metadata": {},
    "outputs": [],
    "source": []
